@@ -58,6 +58,7 @@ module Fairy
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemorySizedPoolQueue}
   CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
+#  CONF.POSTQUEUING_POLICY = {:queuing_class => :ChunkedFileBufferdQueue}
 
 ##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
   CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 100000
@@ -91,9 +92,12 @@ CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 CONF.HASH_OPTIMIZE = true
 
 ##CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
+#CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :OnMemoryBuffer}
+#CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :CommandMergeSortBuffer}
 CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
+
 ##CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 10000
-#CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100000
+CONF.MOD_GROUP_BY_CMSB_THRESHOLD = 100000
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.BARRIER_MEMORY_BUFFERING_POLICY = {:queuing_class => :PoolQueue}
